<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    android:id="@+id/top_courseSorts_rg"
    android:paddingLeft="7dp"
    android:paddingRight="7dp"
    android:layout_marginTop="13dp"
    android:layout_marginBottom="3dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioButton
        android:layout_margin="7dp"
        android:maxLines="1"
        android:id="@+id/top_courseSorts_rbSubject"
        android:text="@string/home_courseSorts_topSubject"
        android:gravity="center"
        android:textSize="14sp"
        android:button="@null"
        android:background="@drawable/coursesorts_button"
        android:textColor="@color/text_content_999"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />

    <RadioButton
        android:layout_margin="7dp"
        android:maxLines="1"
        android:id="@+id/top_courseSorts_rbTeacher"
        android:text="@string/home_courseSorts_topTeacher"
        android:gravity="center"
        android:textSize="14sp"
        android:button="@null"
        android:background="@drawable/coursesorts_button"
        android:textColor="@color/text_content_999"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <RadioButton
        android:layout_margin="7dp"
        android:maxLines="1"
        android:id="@+id/top_courseSorts_rbSort"
        android:text="@string/home_courseSorts_topSort"
        android:gravity="center"
        android:textSize="14sp"
        android:button="@null"
        android:background="@drawable/coursesorts_button"
        android:textColor="@color/text_content_999"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />

    <RadioButton
        android:layout_margin="7dp"
        android:maxLines="1"
        android:id="@+id/top_courseSorts_rbFree"
        android:text="@string/home_courseSorts_topFree"
        android:gravity="center"
        android:textSize="14sp"
        android:button="@null"
        android:background="@drawable/coursesorts_button"
        android:textColor="@color/text_content_999"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <RadioButton
        android:layout_margin="7dp"
        android:maxLines="1"
        android:id="@+id/top_courseSorts_rbPay"
        android:text="@string/home_courseSorts_topPay"
        android:gravity="center"
        android:textSize="14sp"
        android:button="@null"
        android:background="@drawable/coursesorts_button"
        android:textColor="@color/text_content_999"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />



</RadioGroup>