<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kb260.bxjy.ui.account.LoginPwActivity">

    <include layout="@layout/toolbar"/>

    <ImageView
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="65dp"
        android:src="@drawable/login_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:textSize="17sp"
        android:hint="@string/account_phoneHint"
        android:id="@+id/a_loginPw_etPhone"
        android:inputType="phone"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/account_et"
        android:drawableLeft="@drawable/account_phone"
        android:drawableStart="@drawable/account_phone"
        android:drawablePadding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:textSize="17sp"
        android:hint="@string/account_pwHint"
        android:inputType="textPassword"
        android:id="@+id/a_loginPw_etPw"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/account_et"
        android:drawableLeft="@drawable/account_pw"
        android:drawableStart="@drawable/account_pw"
        android:drawablePadding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/a_loginPw_forgetPw"
        android:padding="8dp"
        android:layout_marginRight="45dp"
        android:layout_marginEnd="45dp"
        android:layout_gravity="end"
        android:textSize="14sp"
        android:textColor="@color/text_content_999"
        android:text="@string/account_pwForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:id="@+id/a_loginPw_login"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/account_toolbar_login"
            android:background="@drawable/account_bt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:id="@+id/a_loginPw_register"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/account_toolbar"
            android:background="@drawable/account_bt_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/a_loginPw_loginByCode"
        android:padding="8dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:text="@string/account_loginByCode"
        android:textColor="@color/price_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
